[gd_scene load_steps=8 format=3 uid="uid://cuk3remwc8qav"]

[ext_resource type="Script" path="res://Weapons/Shotgun/Shotgun.gd" id="1_djg0p"]
[ext_resource type="Texture2D" uid="uid://mrpl8esds270" path="res://Weapons/Shotgun/m1014_1.png" id="2_kjg6f"]
[ext_resource type="Texture2D" uid="uid://pwp2kkkoy03w" path="res://Characters/Null_C/images/arm.png" id="3_nothb"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_3n0k1"]
a = Vector2(8, 33)
b = Vector2(-8, 33)

[sub_resource type="Animation" id="Animation_jte3w"]
resource_name = "reload"
length = 1.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.0117383, 0.559142, 0.559142, -0.0117383]
}

[sub_resource type="Animation" id="Animation_onxgc"]
resource_name = "shoot"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Shotgun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(65.6225, -1.52712), Vector2(60.4029, -22.4598), Vector2(65.6225, -1.52712)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/Arm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(19.9751, 2.23462), Vector2(19.076, -5.77575), Vector2(19.9751, 2.23462)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/Shotgun:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-3.12985, -3.45575, -3.12985]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/Arm:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.55906, -1.91986, -1.55906]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Marker2D/ShootingPoint:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(134.12, -9.42635), Vector2(124.614, -51.5408), Vector2(134.12, -9.42635)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Marker2D/ShootingPoint:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0056614, -0.314159, 0.0056614]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43qne"]
_data = {
"reload": SubResource("Animation_jte3w"),
"shoot": SubResource("Animation_onxgc")
}

[node name="Shotgun" type="Area2D"]
script = ExtResource("1_djg0p")

[node name="Marker2D" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-24, -32)
rotation = -0.0117383

[node name="Shotgun" type="Sprite2D" parent="Marker2D"]
position = Vector2(65.6225, -1.52712)
rotation = -3.12985
scale = Vector2(0.0578277, -0.0516001)
texture = ExtResource("2_kjg6f")

[node name="Arm" type="Sprite2D" parent="Marker2D"]
position = Vector2(19.9751, 2.23462)
rotation = -1.55906
scale = Vector2(0.104226, 0.112086)
texture = ExtResource("3_nothb")

[node name="ShootingPoint" type="Marker2D" parent="Marker2D"]
unique_name_in_owner = true
position = Vector2(134.12, -9.42635)
rotation = 0.0056614

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-24, -32)
shape = SubResource("SegmentShape2D_3n0k1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_43qne")
}

[node name="Reload_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.75
one_shot = true

[connection signal="timeout" from="Reload_timer" to="." method="_on_reload_timer_timeout"]
